<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Notepad</string>
    <string name="fab_des">Add note</string>
    <string name="search_menu">search menu</string>
    <string name="search_menu_editor">Search 1</string>
    <string name="sort_menu">SORT</string>
    <string name="empty_trash_menu">Empty trash</string>
    <string name="menu_title">Notepad Free</string>
    <string name="todo">TODO</string>
    <string name="save_menu">SAVE</string>
    <string name="undo_menu">UNDO</string>
    <string name="note_title">Enter title…</string>
    <string name="note_content">Enter text…</string>
    <string name="format_last_edit">Last edit: %s</string>
    <string name="format_creation_time">Created: %s</string>
    <string name="menu_delete">delete</string>
    <string name="menu_select_all">select all</string>
    <string name="trash_title">Trash</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_categories">Categories</string>
    <string name="item_edit_categories">Edit categories</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_undelete_all">Undelete all</string>
    <string name="menu_selected_delete">Delete</string>
    <string name="menu_select_all_notes">Select all notes</string>
    <string name="menu_undo_all">Undo all</string>
    <string name="menu_editor_delete">Delete</string>
    <string name="menu_editor_search">Search</string>
    <string name="menu_redo">Redo</string>
    <string name="message_undo_all_dialog">Remove all of the note changes made since the last opening of the note?</string>
    <string name="option_undo_all">UNDO ALL</string>
    <string name="option_no">NO</string>
    <string name="title_untitled">Untitled</string>
    <string name="delete_dialog_message">The \'%1$s\' note will be deleted. Are you sure?</string>
    <string name="option_delete">DELETE</string>
    <string name="option_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="option_undelete">Undelete</string>
    <string name="show_item_action_title">Select an action for the note:</string>
    <string name="option_ok">OK</string>
    <string name="clear_trash_dialog_message">All trashed notes will be deleted permanently. Are you sure that you want to delete all of the trashed notes?</string>
    <string name="option_yes">YES</string>
    <string name="undelete_all_dialog_message">Restore all notes?</string>
    <string name="delete_selected_dialog_message">Are you sure that you want to delete the selected notes? The notes will be deleted permanently.</string>
    <string name="menu_search_down">Next</string>
    <string name="menu_search_up">Previous</string>
    <string name="menu_count">0/0</string>
    <string name="menu_search_trigger">Search</string>
    <string name="note_saved_toast">Note saved</string>
    <string name="show_confirm_delete_dialog_message">Delete the selected note?</string>
    <string name="delete_title">Delete</string>
    <string name="sort_note_dialog_title">Sort by</string>
    <string name="sort_option">SORT</string>
    <string name="count_status">0/0</string>
    <string name="notepad_header">Notepad Free</string>
    <string name="categories_title">Categories</string>
    <string name="edtCate_hint">New category name</string>
    <string name="add_cate_btn">ADD</string>
    <string name="menu_categorize">Categorize</string>
    <string name="category_updated_toast">Updated categories</string>
    <string name="subtitle_uncategorized">Uncategorized</string>
    <string name="remove_color">REMOVE THE COLOR</string>
    <string name="colorize_title">Colorize</string>
    <string name="select_category_title">Select category</string>
    <string name="delete_category_message">Delete category \'%1$s\'? Notes from the category won\'t be deleted.</string>
    <string name="empty_error_message">Category name cannot be empty</string>
    <string name="exists_name_error_message">Category with that name already exists.</string>
    <string name="edit_category_title">Edit category name</string>
    <string name="select_color_title">Select color</string>
    <string name="edit_date_from_newest">edit date: from newest</string>
    <string name="edit_date_from_oldest">edit date: from oldest</string>
    <string name="title_a_to_z">title: A to Z</string>
    <string name="title_z_to_a">title: Z to A</string>
    <string name="creation_date_from_newest">creation date: from newest</string>
    <string name="creation_date_from_oldest">creation date: from oldest</string>
    <string name="color_in_order_as_shown_on_color_palette">color: in order as shown on color palette</string>
    <string name="no_categories_info">Categories can be added in the app\'s menu. To open the menu use the \u2261 button in the top left corner of the note list screen.</string>
    <string name="tutorial_tap">Tap (or click) the note above to open it</string>
    <string name="tutorial_add">Use the + (plus) button below to create a new note</string>
    <string name="welcome_title">Hi, how are you? (tap to open)</string>
    <string name="welcome_content">Thank you for downloading Notepad Free.\nThis is a welcome message.\nYou can delete this message by clicking\nDelete button in the top right corner.\nYou can revert any unwanted changes during\nnote edition with the \"Undo\" and \"Redo\"\nbuttons. Try to edit this text, and click the\nbuttons in the top right corner.\nPlease check the main menu for additional\nfunctions, like Help screen, backup functions,\nor settings. It can be opened with the button\nin the top left corner of the main screen.\n\nHave a nice day.\n☺️</string>
    <string name="read_mode_title">Switch to read mode</string>
</resources>
