<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_15sdp"
        android:paddingHorizontal="@dimen/_18sdp"
        android:textAlignment="textStart"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/sort_note_dialog_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/rgSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rb0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            app:buttonTint="@color/dialog_option_color"
            android:text="@string/edit_date_from_newest" />

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/dialog_option_color"
            android:text="@string/edit_date_from_oldest" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/dialog_option_color"
            android:text="@string/title_a_to_z" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/dialog_option_color"
            android:text="@string/title_z_to_a" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/dialog_option_color"
            android:text="@string/creation_date_from_newest" />

        <RadioButton
            android:id="@+id/rb5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/dialog_option_color"
            android:text="@string/creation_date_from_oldest" />

        <RadioButton
            android:id="@+id/rb6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/dialog_option_color"
            android:text="@string/color_in_order_as_shown_on_color_palette" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCancel"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_cancel"
        android:paddingBottom="@dimen/_15sdp"
        android:textColor="@color/dialog_option_color"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintEnd_toStartOf="@+id/btnOk"
        app:layout_constraintTop_toBottomOf="@id/rgSort"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnOk"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_option"
        android:paddingBottom="@dimen/_15sdp"
        android:textColor="@color/dialog_option_color"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgSort"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>