<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingTop="@dimen/_12sdp"
        android:text="@string/edit_category_title"
        android:textAlignment="textStart"
        android:textColor="@color/black_80"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:backgroundTint="@color/dialog_option_color"
        android:hint="@string/edtCate_hint"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:textColor="@color/red"
        android:textSize="@dimen/_10ssp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/edtName" />

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvError">

        <Button
            android:id="@+id/btnCancel"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/option_cancel"
            android:textColor="@color/dialog_option_color" />

        <Button
            android:id="@+id/btnOk"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/option_ok"
            android:textColor="@color/dialog_option_color" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>