<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/select_color_title"
        android:textAlignment="center"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rvColors"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvColors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="6"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_color"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRemoveColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:background="@drawable/bg_remove_btn"
        app:backgroundTint="@null"
        app:iconTint="@color/black"
        app:iconSize="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:minHeight="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:iconPadding="@dimen/_1sdp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/remove_color"
        app:icon="@drawable/ic_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvColors" />

    <Button
        android:id="@+id/btnCancel"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_cancel"
        android:textColor="@color/dialog_option_color"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        app:layout_constraintTop_toBottomOf="@id/btnRemoveColor" />

    <Button
        android:id="@+id/btnOk"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_ok"
        android:textColor="@color/dialog_option_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRemoveColor" />

</androidx.constraintlayout.widget.ConstraintLayout>