<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layoutPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:orientation="vertical"
        android:paddingTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvPreviewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingHorizontal="@dimen/_15sdp"
            android:textSize="@dimen/_12ssp"
            tools:text="Preview Title" />

        <TextView
            android:id="@+id/tvPreviewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingHorizontal="@dimen/_15sdp"
            android:textSize="@dimen/_12ssp"
            tools:text="Preview content goes here" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@color/dialog_option_color_80"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingTop="@dimen/_2sdp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPreview"
        tools:text="@string/show_item_action_title" />

    <RadioGroup
        android:id="@+id/rgTrashAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_18sdp"
        app:layout_constraintBottom_toTopOf="@id/layoutOption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <RadioButton
            android:id="@+id/rbUndelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:minHeight="0dp"
            app:buttonTint="@color/dialog_option_color"
            android:text="@string/option_undelete"
            android:textSize="@dimen/_10ssp" />

        <RadioButton
            android:id="@+id/rbDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            app:buttonTint="@color/dialog_option_color"
            android:text="@string/delete_title"
            android:textSize="@dimen/_10ssp"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layoutOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgTrashAction">

        <Button
            android:id="@+id/btnCancel"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/option_cancel"
            android:textColor="@color/dialog_option_color" />

        <Button
            android:id="@+id/btnOk"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/option_ok"
            android:textColor="@color/dialog_option_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>