<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:text="@string/select_category_title"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="@dimen/_250sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/layoutButtons"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:listitem="@layout/item_category_option"
        tools:itemCount="2"/>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvCategories">

        <Button
            android:id="@+id/btnCancel"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/option_cancel"
            android:textColor="@color/dialog_option_color" />

        <Button
            android:id="@+id/btnOk"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/option_ok"
            android:textColor="@color/dialog_option_color" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>